Regression: UV window menus disappearing #115590

Closed
opened 2023-11-30 01:52:39 +01:00 by DylanND · 14 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 4080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.99

Blender Version
Broken: version: 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-10-24 22:20, hash: 4e3ee4f026c3
Worked: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-25 21:53, hash: 2aa393e72771

Short description of error
In the UV window, specific tool menus are missing when selecting components. E.g. selection falloff, snapping, image slots, etc. Object mode tools were visible, but entering component mode they disappeared. Bug resolved itself after taking unknown steps (restarting blender, interacting with the menus before entering component mode etc)

Exact steps for others to reproduce the error
Select a mesh in the UV editing window layout, and then enter component selection.
Unknown steps resolved this, indicating it may have been a temporary bug.

**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 4080/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.99 **Blender Version** Broken: version: 4.0.0 Beta, branch: blender-v4.0-release, commit date: 2023-10-24 22:20, hash: `4e3ee4f026c3` Worked: version: 4.0.0 Alpha, branch: main, commit date: 2023-09-25 21:53, hash: `2aa393e72771` **Short description of error** In the UV window, specific tool menus are missing when selecting components. E.g. selection falloff, snapping, image slots, etc. Object mode tools were visible, but entering component mode they disappeared. Bug resolved itself after taking unknown steps (restarting blender, interacting with the menus before entering component mode etc) **Exact steps for others to reproduce the error** Select a mesh in the UV editing window layout, and then enter component selection. Unknown steps resolved this, indicating it may have been a temporary bug.
DylanND added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-11-30 01:52:40 +01:00
Contributor

I had same problem over and over. Reseting factory settings helps but something is keep hiding the menus

I had same problem over and over. Reseting factory settings helps but something is keep hiding the menus
Member

Hi, thanks for the report. I'm not able to redo this locally. In provided file tool header is hidden itself.

Reseting factory settings helps but something is keep hiding the menus

Could it be the file/startup file is corrupted or some add-on caused it?

Hi, thanks for the report. I'm not able to redo this locally. In provided file `tool header` is hidden itself. > Reseting factory settings helps but something is keep hiding the menus Could it be the file/startup file is corrupted or some add-on caused it?
Pratik Borhade added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-11-30 09:26:31 +01:00
Contributor

Hi, thanks for the report. I'm not able to redo this locally. In provided file tool header is hidden itself.

Reseting factory settings helps but something is keep hiding the menus

Could it be the file/startup file is corrupted or some add-on caused it?

Im not using any addons that access UV editor, but I'll check. Its not startup file I checked deleting my preferences folder. And happened on my home and work PCs. Its just in some files, not universal. But cant pinpoint what causes it to disappear

> Hi, thanks for the report. I'm not able to redo this locally. In provided file `tool header` is hidden itself. > > Reseting factory settings helps but something is keep hiding the menus > > Could it be the file/startup file is corrupted or some add-on caused it? Im not using any addons that access UV editor, but I'll check. Its not startup file I checked deleting my preferences folder. And happened on my home and work PCs. Its just in some files, not universal. But cant pinpoint what causes it to disappear
Author

Hi, thanks for the report. I'm not able to redo this locally. In provided file tool header is hidden itself.

That's odd, the header isn't disabled on my end? Screenshot attatched for context.
I've disabled all community addons, saved a new startup file in case it got corrupted, and recreated the problem in a new blend from that new startup file.

I've attatched a new blend just in case, but please let me know if there's anything else i can do to help identify the issue.

> Hi, thanks for the report. I'm not able to redo this locally. In provided file `tool header` is hidden itself. That's odd, the header isn't disabled on my end? Screenshot attatched for context. I've disabled all community addons, saved a new startup file in case it got corrupted, and recreated the problem in a new blend from that new startup file. I've attatched a new blend just in case, but please let me know if there's anything else i can do to help identify the issue.
Member

Thanks. Can confirm. Note that we also have #114929 which seems related to this. Not sure how this file end up in such situation.
I checked version: 400 and subversion: 36, file was last saved in 4.0.1
Can you still redo this issue from scratch in 4.0.1?

Thanks. Can confirm. Note that we also have #114929 which seems related to this. Not sure how this file end up in such situation. I checked version: 400 and subversion: 36, file was last saved in 4.0.1 Can you still redo this issue from scratch in 4.0.1?
Author

Can confirm, starting a new blend in 4.0.1 i can still recreate the issue with the following steps.

Add mesh (monkey) -> split area to UV window -> select mesh -> edit vertices -> select all

And the UV header options will be missing

Can confirm, starting a new blend in 4.0.1 i can still recreate the issue with the following steps. Add mesh (monkey) -> split area to UV window -> select mesh -> edit vertices -> select all And the UV header options will be missing
Member

Thanks but still not able to confirm from scratch. Can you share startup.blend file of 4.0? (C:\Users\user_name\AppData\Roaming\Blender Foundation\Blender\4.0\config)

@lichtwerk , can you confirm?

Thanks but still not able to confirm from scratch. Can you share startup.blend file of 4.0? (`C:\Users\user_name\AppData\Roaming\Blender Foundation\Blender\4.0\config`) @lichtwerk , can you confirm?
Iliya Katushenock changed title from UV window menus disappearing to Regression: UV window menus disappearing 2023-12-13 11:55:48 +01:00
Iliya Katushenock added this to the 4.0 milestone 2023-12-13 11:56:03 +01:00
Member

Can confirm in those files, will check...

Can confirm in those files, will check...
Philipp Oeser added
Status
Confirmed
and removed
Status
Needs Information from User
labels 2023-12-13 12:23:59 +01:00
Member

@mano-wii : there was a bit of confusion with the versioning code from fb556c75df

Seems both of the reported files (the one in this report and the one from #116133) are from

>>> D.version
(4, 0, 36)

Not sure what we can do here, mind checking?

@mano-wii : there was a bit of confusion with the versioning code from fb556c75df4ce336e61aa9ba16aa4c853548f06d Seems both of the reported files (the one in this report and the one from #116133) are from ``` >>> D.version (4, 0, 36) ``` Not sure what we can do here, mind checking?
Philipp Oeser added
Module
Modeling
and removed
Interest
Modeling
Interest
Python API
Interest
User Interface
labels 2023-12-13 15:40:40 +01:00
Member

This might only affect a certain range of files (timewise), but just to be on the safe side, will set to High prio for now.

This might only affect a certain range of files (timewise), but just to be on the safe side, will set to High prio for now.
Philipp Oeser added
Priority
High
and removed
Priority
Normal
labels 2023-12-13 15:42:00 +01:00

The problem can happen if you open a version of 4.0+ in 3.6.
One solution is to create forward compatibility in 3.6.
I will create a patch.

The problem can happen if you open a version of 4.0+ in 3.6. One solution is to create forward compatibility in 3.6. I will create a patch.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-13 17:54:23 +01:00

Cool, thanks. Any solutions for files which are already affected? Copy everything into a new file?

Cool, thanks. Any solutions for files which are already affected? Copy everything into a new file?

I have the same problem, Uvs header functions just disapearing, Was really driving me crazy here, I thoug I turned some feature off, till I see there more people with the same issue.

I have the same problem, Uvs header functions just disapearing, Was really driving me crazy here, I thoug I turned some feature off, till I see there more people with the same issue.

Cool, thanks. Any solutions for files which are already affected? Copy everything into a new file?

Did you find a solution that works for this problem?

> Cool, thanks. Any solutions for files which are already affected? Copy everything into a new file? Did you find a solution that works for this problem?
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115590
No description provided.