Fix #115590: Snap menu disappears due to lack of forward compatibility

Caused by fb556c75df.

The RNA of enums require a valid value, otherwise we will have the error:
`KeyError: 'bpy_prop_collection[key]: key "" not found'`

Pull Request: https://projects.blender.org/blender/blender/pulls/116155